Add Learn Export and Drupal Book workflows

--- a/.env.sample
+++ b/.env.sample
@@ -1,9 +1,14 @@
+COURSE_DATA_DIR=./courses/ # Where downloaded course data will be saved
 LEARN_BASE_URL=https://somedomain.com/learn
 LEARN_API_URL=${LEARN_BASE_URL}/api/public
-LEARN_CLIENT_ID=
-LEARN_CLIENT_SECRET=
-LEARN_COURSE_ID=
+LEARN_API_CLIENT_ID=
+LEARN_API_CLIENT_SECRET=
+LEARN_API_COURSE_ID=
+LEARN_EXPORT_FILE=ArchiveExFile_course.zip
 DRUPAL_BASE_URL=https://somedomain.com/drupal
 DRUPAL_API_URL=${DRUPAL_BASE_URL}/jsonapi
+DRUPAL_GRAPHQL_URL=${DRUPAL_BASE_URL}/graphql
 DRUPAL_USERNAME=
 DRUPAL_PASSWORD=
+DRUPAL_COURSE_ID=
+DRUPAL_COURSE_ACRONYM=
